<resources>
    <string name="app_name">Pokecart</string>

    <!--  shop item  -->
    <string name="stat_health">HP</string>
    <string name="stat_attack">ATK</string>
    <string name="stat_defense">DEF</string>
    <string name="stat_speed">SPD</string>

    <!--  types  -->
    <string name="type_normal">normal</string>
    <string name="type_fighting">fighting</string>
    <string name="type_flying">flying</string>
    <string name="type_poison">poison</string>

    <!--  filter dialog  -->
    <string name="filter_types">Types:</string>
    <string name="filter_health">Health:</string>
    <string name="filter_attack">Attack:</string>
    <string name="filter_defense">Defense:</string>
    <string name="filter_speed">Speed:</string>
    <string name="filter_apply_filters">Apply Filters</string>

    <!--  cart dialog  -->
    <string name="no_pokemon_in_your_basket">No Pokemon in your basket!</string>
    <string name="subtotal">Subtotal</string>
    <string name="poketax">Poke-tax</string>
    <string name="total">Total</string>
    <string name="buy_pokemon">Buy Pokemon</string>
    <string name="clear_pokemon">Clear</string>
    <string name="review_your_order">Review Your Order</string>

</resources>
