<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="uk.co.jakebreen.pokecart.ui.cart.CartDialogViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvYourOrder"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_your_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <uk.co.jakebreen.pokecart.ui.cart.CartRecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cart_max_height"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvYourOrder"
                tools:listitem="@layout/cart_item" />

            <TextView
                android:id="@+id/text_view_empty_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:text="@string/no_pokemon_in_your_basket"
                android:visibility="@{viewModel.observeCartEmpty() ? View.VISIBLE : View.GONE}"
                style="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYourOrder" />

            <TextView
                android:id="@+id/tvSubTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_24dp"
                android:layout_marginTop="@dimen/margin_padding_24dp"
                android:text="@string/subtotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <TextView
                android:id="@+id/tvSubTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_24dp"
                android:layout_marginEnd="@dimen/margin_padding_24dp"
                app:subtotal="@{viewModel.observeSubtotal()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                tools:hint="$23.00" />

            <TextView
                android:id="@+id/tvPoketax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_24dp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:text="@string/poketax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubTotal" />

            <TextView
                android:id="@+id/tvPoketaxAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_24dp"
                app:poketax="@{viewModel.observePoketax()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubTotalAmount"
                tools:hint="$12.00" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_24dp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:text="@string/total"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPoketax" />

            <TextView
                android:id="@+id/tvTotalAmount"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_24dp"
                android:textStyle="bold"
                app:total="@{viewModel.observeTotal()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPoketaxAmount"
                tools:hint="$35.00" />

            <Button
                android:id="@+id/btBuyPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_24dp"
                android:text="@string/buy_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTotalAmount" />

            <Button
                android:id="@+id/btClearPokemon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/clear_pokemon"
                android:onClick="@{view -> viewModel.clear()}"
                app:layout_constraintEnd_toEndOf="@+id/btBuyPokemon"
                app:layout_constraintStart_toStartOf="@+id/btBuyPokemon"
                app:layout_constraintTop_toBottomOf="@id/btBuyPokemon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>