<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="presenter" type="uk.co.jakebreen.pokecart.ui.filter.FilterDialogPresenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFilterTypes"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_types"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgFilterTypes"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:chipSpacingVertical="@dimen/dimen_8dp"
            app:chipSpacingHorizontal="@dimen/dimen_8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterTypes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvFilterHealth"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/filter_health"
            app:layout_constraintTop_toBottomOf="@+id/cgFilterTypes"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsFilterHealth"
            style="@style/StatSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackColorActive="@color/health_primary"
            app:trackColorInactive="@color/health_secondary"
            app:thumbColor="@color/health_primary"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterHealth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvFilterAttack"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_attack"
            app:layout_constraintTop_toBottomOf="@+id/rsFilterHealth"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsFilterAttack"
            style="@style/StatSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackColorActive="@color/attack_primary"
            app:trackColorInactive="@color/attack_secondary"
            app:thumbColor="@color/attack_primary"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterAttack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvFilterDefense"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_defense"
            app:layout_constraintTop_toBottomOf="@+id/rsFilterAttack"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsFilterDefense"
            style="@style/StatSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackColorActive="@color/defense_primary"
            app:trackColorInactive="@color/defense_secondary"
            app:thumbColor="@color/defense_primary"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterDefense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvFilterSpeed"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_speed"
            app:layout_constraintTop_toBottomOf="@+id/rsFilterDefense"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsFilterSpeed"
            style="@style/StatSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterSpeed"
            app:thumbColor="@color/speed_primary"
            app:trackColorActive="@color/speed_primary"
            app:trackColorInactive="@color/speed_secondary" />

        <Button
            android:id="@+id/btApplyFilters"
            android:text="@string/filter_apply_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rsFilterSpeed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> presenter.saveFilters()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>