<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="uk.co.jakebreen.pokecart.ui.shop.ShopItemViewModel" />
        <variable
            name="viewModelClick"
            type="uk.co.jakebreen.pokecart.ui.shop.ShopAdapter.ShopViewModelClickListener"/>
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_8dp"
        app:cardCornerRadius="@dimen/shop_item_card_corner_radius"
        app:cardPreventCornerOverlap="false"
        android:onClick="@{(view) -> viewModelClick.onShopViewModelClicked(viewModel.id)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_8dp">

            <ImageView
                android:id="@+id/ivPokemonImage"
                android:layout_width="@dimen/shop_item_image_view_height"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                app:image="@{viewModel.image}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layoutStats"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvPokemonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:gravity="center"
                android:text="@{viewModel.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPokemonImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:hint="Pokemon Name"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutStats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPokemonImage"
                app:layout_constraintTop_toBottomOf="@id/tvPokemonName">

                <TextView
                    android:id="@+id/tvPokemonHealth"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:text="@string/stat_health"
                    app:layout_constraintEnd_toStartOf="@+id/pbPokemonHealth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/pbPokemonHealth"
                    style="@style/AppTheme.ProgressBar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:layout_marginStart="@dimen/margin_padding_8dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_8dp"
                    android:foregroundGravity="center_horizontal"
                    android:max="300"
                    android:progressTint="@android:color/holo_red_light"
                    app:health="@{viewModel.health}"
                    app:healthTotal="@{tvPokemonHealthTotal}"
                    app:hasAnimated="@{viewModel.hasAnimated}"
                    app:layout_constraintEnd_toStartOf="@id/tvPokemonHealthTotal"
                    app:layout_constraintStart_toEndOf="@id/tvPokemonHealth"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPokemonHealthTotal"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_total_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:gravity="end"
                    tools:hint="100/300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pbPokemonHealth"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPokemonAttack"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:text="@string/stat_attack"
                    app:layout_constraintEnd_toStartOf="@+id/pbPokemonAttack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPokemonHealth" />

                <ProgressBar
                    android:id="@+id/pbPokemonAttack"
                    style="@style/AppTheme.ProgressBar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:layout_marginStart="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_8dp"
                    android:max="300"
                    android:progressTint="@android:color/holo_orange_dark"
                    app:attack="@{viewModel.attack}"
                    app:attackTotal="@{tvPokemonAttackTotal}"
                    app:hasAnimated="@{viewModel.hasAnimated}"
                    app:layout_constraintEnd_toStartOf="@id/tvPokemonAttackTotal"
                    app:layout_constraintStart_toEndOf="@id/tvPokemonAttack"
                    app:layout_constraintTop_toBottomOf="@id/pbPokemonHealth" />

                <TextView
                    android:id="@+id/tvPokemonAttackTotal"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_total_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:gravity="end"
                    tools:hint="100/300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pbPokemonAttack"
                    app:layout_constraintTop_toBottomOf="@id/tvPokemonHealthTotal" />

                <TextView
                    android:id="@+id/tvPokemonDefense"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:text="@string/stat_defense"
                    app:layout_constraintEnd_toStartOf="@+id/pbPokemonDefense"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPokemonAttack" />

                <ProgressBar
                    android:id="@+id/pbPokemonDefense"
                    style="@style/AppTheme.ProgressBar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:layout_marginStart="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_8dp"
                    android:max="300"
                    android:progressTint="@android:color/holo_orange_light"
                    app:defense="@{viewModel.defense}"
                    app:defenseTotal="@{tvPokemonDefenseTotal}"
                    app:hasAnimated="@{viewModel.hasAnimated}"
                    app:layout_constraintEnd_toStartOf="@id/tvPokemonDefenseTotal"
                    app:layout_constraintStart_toEndOf="@id/tvPokemonDefense"
                    app:layout_constraintTop_toBottomOf="@+id/pbPokemonAttack" />

                <TextView
                    android:id="@+id/tvPokemonDefenseTotal"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_total_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:gravity="end"
                    tools:hint="100/300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pbPokemonDefense"
                    app:layout_constraintTop_toBottomOf="@id/tvPokemonAttackTotal" />

                <TextView
                    android:id="@+id/tvPokemonSpeed"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:text="@string/stat_speed"
                    app:layout_constraintEnd_toStartOf="@+id/pbPokemonSpeed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPokemonDefense" />

                <ProgressBar
                    android:id="@+id/pbPokemonSpeed"
                    style="@style/AppTheme.ProgressBar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:layout_marginStart="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_8dp"
                    android:max="300"
                    android:progressTint="@android:color/holo_purple"
                    app:speed="@{viewModel.speed}"
                    app:speedTotal="@{tvPokemonSpeedTotal}"
                    app:hasAnimated="@{viewModel.hasAnimated}"
                    app:layout_constraintEnd_toStartOf="@id/tvPokemonSpeedTotal"
                    app:layout_constraintStart_toEndOf="@id/tvPokemonSpeed"
                    app:layout_constraintTop_toBottomOf="@id/pbPokemonDefense" />

                <TextView
                    android:id="@+id/tvPokemonSpeedTotal"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="@dimen/shop_item_stats_total_text_width"
                    android:layout_height="@dimen/margin_padding_16dp"
                    android:gravity="end"
                    tools:hint="100/300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pbPokemonSpeed"
                    app:layout_constraintTop_toBottomOf="@id/tvPokemonDefenseTotal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/ivPokemonTypePrimary"
                android:layout_width="@dimen/margin_padding_24dp"
                android:layout_height="@dimen/margin_padding_24dp"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                app:layout_constraintStart_toEndOf="@id/ivPokemonImage"
                app:layout_constraintTop_toBottomOf="@id/layoutStats"
                app:typePrimary="@{viewModel.typePrimary}"
                tools:srcCompat="@drawable/ic_type_dragon_128" />

            <ImageView
                android:id="@+id/ivPokemonTypeSecondary"
                android:layout_width="@dimen/margin_padding_24dp"
                android:layout_height="@dimen/margin_padding_24dp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                app:layout_constraintStart_toEndOf="@id/ivPokemonTypePrimary"
                app:layout_constraintTop_toBottomOf="@id/layoutStats"
                app:typeSecondary="@{viewModel.typeSecondary}"
                tools:srcCompat="@drawable/ic_type_grass_128" />

            <TextView
                android:id="@+id/tvPokemonPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                tools:hint="$3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutStats"
                app:shopPrice="@{viewModel.price}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>